refactor: nio 패키지 UTF-8을 사용하던 것 전부 문자열로 변경
- nio 요구사항에 맞춰 사용 X